# early-modern-global

./: .gitignore  README.md  TF_IDF.ipynb  indigo_co_occurrences.csv  main.ipynb  molasses_co_occurrences.csv  negroes_co_occurrences.csv  pyproject.toml  read_article_text.py  rice_co_occurrences.csv  sugar_co_occurrences.csv  tfidf_imports.py  tobacco_co_occurrences.csv
scripts/: get_data.sh
src/: count_ngrams.py  main.py  metadata_overview.py  settings.py
src/EDA/: TF_IDF.py  count_ngrams.py  custom_embedding.py  explore_categories.py  find_person_ner.py  generate_advertisement_noun_adj_list.py  generate_figure_advertisement.py  get_cooccurence_frequencies.py  get_files_based_on_string.py  get_random_ad.py  ner_analyze_result.py
src/graph_west_indies/: clustering_get_texts.py  extract_country_paragraphs.py  find_person_ner.py  graph_clustering.py  graph_persons.py  ner.py  ner_analyze_result.py  visualize_clustering.py
src/modelling/: clustering_get_texts.py  graph_clustering.py  graph_persons.py  graphs_metrics.py  locations_per_year.py  utils.py  visualize_clustering.py  yearly_location_gif.py
src/preprocessing/: clean_dataset.py  detect_words.py  extract_country_paragraphs.py  filter_ads.py  ner.py  process_gazeteer.py  test_string.py  utils.py
src/visualization/: locations_per_year.py  yearly_location_gif.py
