[project]
name = "early-modern-global"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adjusttext>=1.3.0",
    "cython>=3.1.1",
    "flashtext>=2.7",
    "folium>=0.19.5",
    "ftfy>=6.3.1",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "names-dataset>=3.3.1",
    "networkx>=3.4.2",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "polars>=1.29.0",
    "python-louvain>=0.16",
    "regex>=2024.11.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "snowballstemmer>=3.0.1",
    "spacy>=3.8.5",
    "symspellpy>=6.9.0",
    "tqdm>=4.67.1",
]
